--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "bootstrap4-toggle": "^3.6.1",
+    "datatables.net": "^1.10.21",
+    "datatables.net-dt": "^1.10.21",
     "jquery": "^3.5.1",
     "mdbreact": "^4.27.0",
     "react": "^16.13.1",
