--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
-    "bootstrap4-toggle": "^3.6.1",
     "datatables.net": "^1.10.21",
     "datatables.net-dt": "^1.10.21",
+    "history": "^5.0.0",
     "jquery": "^3.5.1",
-    "mdbreact": "^4.27.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
